--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,7 @@
 			<div class="content" id="about">
 				<p>Embedify is a simple tool which converts URLs in a body of text to a relevant embedded format.</p>
 				<p>Try it out below. Just add some text and click convert.</p>
-				<textarea id="text"></textarea>
+				<textarea id="text">http://www.youtube.com/watch?v=BRm01IruyWA</textarea>
 				<div id="preview"></div>
 				<input type="button" id="testrun" value="Convert" />
 				<input type="button" id="preview" value="Preview" />
